[workspace]
resolver = "3"
members = [
    "backend",
    "body",
    "frontend",
    "http-message",
    "util",
]

[workspace.dependencies]
jrpxy-backend = { path = "backend" }
jrpxy-body = { path = "body" }
jrpxy-frontend = { path = "frontend" }
jrpxy-http-message = { path = "http-message" }
jrpxy-util = { path = "util" }

bytes = "1.11.0"
httparse = "1.10.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "time"] }