[package]
name = "jrpxy-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
jrpxy-backend = { workspace = true }
jrpxy-body = { workspace = true }
jrpxy-frontend = { workspace = true }
jrpxy-http-message = { workspace = true }
jrpxy-util = { workspace = true }

bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }